Versão final do projeto

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <div class="text-center">
             <h3>Tarefas</h3>
           </div>
+          
           <div class="input-group">
             <input type="text" name="tarefa" id="tarefa" class="form-control" placeholder="Adicione uma tarefa..." />
             <div class="input-group-append">
@@ -41,16 +42,13 @@
   <div class="row justify-content-center">
     <div class="col-lg-6">
       <ul class="list-group" id="todolist">
-        <li class="list-group-item mt-3">
-          Tarefa 1
-        </li>
-        <li class="list-group-item mt-3" style="text-decoration: line-through">
-          Tarefa 2
-        </li>
+        
       </ul>
     </div>
   </div>
-
+  
+  <script src="src/model/Tarefa.js"></script>
+  <script src="src/index.js"></script>
 </body>
 
 </html>
